--- a/deepfakes/emergency.html
+++ b/deepfakes/emergency.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Security Policies - Security Awareness: Deepfakes &amp; Prompt Injections</title>
+        <title>Emergency Response - Security Awareness: Deepfakes &amp; Prompt Injections</title>
 
 
         <!-- Custom HTML head -->
@@ -147,7 +147,7 @@
                         <a href="https://github.com/durellwilson/security-awareness-course" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/durellwilson/security-awareness-course/edit/main/book/src/prevention/security-policies.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
+                        <a href="https://github.com/durellwilson/security-awareness-course/edit/main/book/src/deepfakes/emergency.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -181,17 +181,94 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="security-policies"><a class="header" href="#security-policies">Security Policies</a></h1>
+                        <h1 id="emergency-response"><a class="header" href="#emergency-response">Emergency Response</a></h1>
+<h2 id="immediate-actions-first-24-hours"><a class="header" href="#immediate-actions-first-24-hours">Immediate Actions (First 24 Hours)</a></h2>
+<h3 id="hour-0-2-contain"><a class="header" href="#hour-0-2-contain">Hour 0-2: Contain</a></h3>
+<ol>
+<li>
+<p><strong>DOCUMENT</strong> everything</p>
+<ul>
+<li>Screenshot/download the deepfake</li>
+<li>Record URLs and timestamps</li>
+<li>Note all distribution channels</li>
+</ul>
+</li>
+<li>
+<p><strong>ALERT</strong> key stakeholders</p>
+<ul>
+<li>Security team</li>
+<li>Legal counsel</li>
+<li>PR/Communications</li>
+<li>Executive leadership</li>
+</ul>
+</li>
+<li>
+<p><strong>PRESERVE</strong> evidence</p>
+<ul>
+<li>Save original files</li>
+<li>Capture metadata</li>
+<li>Document chain of custody</li>
+</ul>
+</li>
+</ol>
+<h3 id="hour-2-6-assess"><a class="header" href="#hour-2-6-assess">Hour 2-6: Assess</a></h3>
+<pre><code>□ Identify the deepfake type
+□ Determine distribution scope
+□ Assess potential damage
+□ Identify affected parties
+□ Evaluate legal implications
+</code></pre>
+<h3 id="hour-6-24-respond"><a class="header" href="#hour-6-24-respond">Hour 6-24: Respond</a></h3>
+<ol>
+<li>Issue takedown requests</li>
+<li>Contact platforms (social media, hosting)</li>
+<li>Notify affected individuals</li>
+<li>Prepare public statement (if needed)</li>
+<li>Activate crisis communication plan</li>
+</ol>
+<h2 id="response-team-structure"><a class="header" href="#response-team-structure">Response Team Structure</a></h2>
+<pre><code>Incident Commander
+├── Technical Lead
+│   ├── Detection &amp; Analysis
+│   └── System Security
+├── Legal Counsel
+│   └── Takedown Requests
+├── Communications Lead
+│   └── Public Messaging
+└── Security Lead
+    └── Containment
+</code></pre>
+<h2 id="platform-takedown-requests"><a class="header" href="#platform-takedown-requests">Platform Takedown Requests</a></h2>
+<h3 id="template"><a class="header" href="#template">Template</a></h3>
+<pre><code class="language-markdown">Subject: Urgent Takedown Request - Deepfake Content
+
+Platform: [Name]
+Content URL: [Link]
+Type: Deepfake/Manipulated Media
+Affected Party: [Name]
+
+Evidence:
+- Original content: [Link]
+- Forensic analysis: [Attached]
+- Legal basis: [DMCA/Platform Policy]
+
+Request immediate removal.
+
+Contact: [Your details]
+Urgency: CRITICAL
+</code></pre>
+<hr />
+<p><strong>Next Module</strong>: <a href="../prompt-injection/understanding.html">Prompt Injection Attacks →</a></p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../prevention/content-verification.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../deepfakes/prevention.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../prevention/input-validation.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../prompt-injection/understanding.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -201,11 +278,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../prevention/content-verification.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../deepfakes/prevention.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../prevention/input-validation.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../prompt-injection/understanding.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
