--- a/emergency/recovery.html
+++ b/emergency/recovery.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Types of Deepfakes - Security Awareness: Deepfakes &amp; Prompt Injections</title>
+        <title>Recovery Procedures - Security Awareness: Deepfakes &amp; Prompt Injections</title>
 
 
         <!-- Custom HTML head -->
@@ -147,7 +147,7 @@
                         <a href="https://github.com/durellwilson/security-awareness-course" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/durellwilson/security-awareness-course/edit/main/book/src/basics/types-of-deepfakes.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
+                        <a href="https://github.com/durellwilson/security-awareness-course/edit/main/book/src/emergency/recovery.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -181,17 +181,34 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="types-of-deepfakes"><a class="header" href="#types-of-deepfakes">Types of Deepfakes</a></h1>
+                        <h1 id="recovery-procedures"><a class="header" href="#recovery-procedures">Recovery Procedures</a></h1>
+<h2 id="post-incident-checklist"><a class="header" href="#post-incident-checklist">Post-Incident Checklist</a></h2>
+<pre><code>□ Incident documented
+□ Root cause identified
+□ Vulnerabilities patched
+□ Monitoring enhanced
+□ Team debriefed
+□ Procedures updated
+□ Training scheduled
+</code></pre>
+<h2 id="metrics-to-track"><a class="header" href="#metrics-to-track">Metrics to Track</a></h2>
+<ul>
+<li>Time to detection</li>
+<li>Time to containment</li>
+<li>Impact scope</li>
+<li>Recovery time</li>
+<li>Cost</li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../basics/what-are-deepfakes.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../emergency/response-plans.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../basics/how-deepfakes-work.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../emergency/templates.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -201,11 +218,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../basics/what-are-deepfakes.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../emergency/response-plans.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../basics/how-deepfakes-work.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../emergency/templates.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
