--- a/emergency/response-plans.html
+++ b/emergency/response-plans.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Reporting Procedures - Security Awareness: Deepfakes &amp; Prompt Injections</title>
+        <title>Response Plans - Security Awareness: Deepfakes &amp; Prompt Injections</title>
 
 
         <!-- Custom HTML head -->
@@ -147,7 +147,7 @@
                         <a href="https://github.com/durellwilson/security-awareness-course" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/durellwilson/security-awareness-course/edit/main/book/src/response/reporting.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
+                        <a href="https://github.com/durellwilson/security-awareness-course/edit/main/book/src/emergency/response-plans.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -181,17 +181,49 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="reporting-procedures"><a class="header" href="#reporting-procedures">Reporting Procedures</a></h1>
+                        <h1 id="response-plans"><a class="header" href="#response-plans">Response Plans</a></h1>
+<h2 id="deepfake-incident-0-24-hours"><a class="header" href="#deepfake-incident-0-24-hours">Deepfake Incident (0-24 hours)</a></h2>
+<h3 id="hour-0-2-contain"><a class="header" href="#hour-0-2-contain">Hour 0-2: Contain</a></h3>
+<ol>
+<li>Document everything</li>
+<li>Alert security team</li>
+<li>Preserve evidence</li>
+</ol>
+<h3 id="hour-2-6-assess"><a class="header" href="#hour-2-6-assess">Hour 2-6: Assess</a></h3>
+<ol>
+<li>Identify deepfake type</li>
+<li>Determine scope</li>
+<li>Assess damage</li>
+</ol>
+<h3 id="hour-6-24-respond"><a class="header" href="#hour-6-24-respond">Hour 6-24: Respond</a></h3>
+<ol>
+<li>Submit takedowns</li>
+<li>Contact platforms</li>
+<li>Issue statements</li>
+</ol>
+<h2 id="prompt-injection-incident"><a class="header" href="#prompt-injection-incident">Prompt Injection Incident</a></h2>
+<h3 id="immediate-0-1-hour"><a class="header" href="#immediate-0-1-hour">Immediate (0-1 hour)</a></h3>
+<ol>
+<li>Isolate systems</li>
+<li>Review logs</li>
+<li>Identify compromise</li>
+</ol>
+<h3 id="short-term-1-24-hours"><a class="header" href="#short-term-1-24-hours">Short-term (1-24 hours)</a></h3>
+<ol>
+<li>Patch vulnerabilities</li>
+<li>Reset credentials</li>
+<li>Notify users</li>
+</ol>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../response/incident-response.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../best-practices/testing.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../response/crisis-communication.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../emergency/recovery.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -201,11 +233,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../response/incident-response.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../best-practices/testing.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../response/crisis-communication.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../emergency/recovery.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
