--- a/best-practices/code-examples.html
+++ b/best-practices/code-examples.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Input Validation - Security Awareness: Deepfakes &amp; Prompt Injections</title>
+        <title>Code Examples - Security Awareness: Deepfakes &amp; Prompt Injections</title>
 
 
         <!-- Custom HTML head -->
@@ -147,7 +147,7 @@
                         <a href="https://github.com/durellwilson/security-awareness-course" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/durellwilson/security-awareness-course/edit/main/book/src/prevention/input-validation.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
+                        <a href="https://github.com/durellwilson/security-awareness-course/edit/main/book/src/best-practices/code-examples.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -181,17 +181,55 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="input-validation"><a class="header" href="#input-validation">Input Validation</a></h1>
+                        <h1 id="code-examples"><a class="header" href="#code-examples">Code Examples</a></h1>
+<h2 id="swift-security-patterns"><a class="header" href="#swift-security-patterns">Swift Security Patterns</a></h2>
+<h3 id="input-sanitization"><a class="header" href="#input-sanitization">Input Sanitization</a></h3>
+<pre><code class="language-swift">func sanitizeInput(_ input: String) -&gt; String {
+    input
+        .replacingOccurrences(of: "ignore", with: "")
+        .replacingOccurrences(of: "system", with: "")
+        .trimmingCharacters(in: .whitespacesAndNewlines)
+}
+</code></pre>
+<h3 id="pii-protection"><a class="header" href="#pii-protection">PII Protection</a></h3>
+<pre><code class="language-swift">struct PrivacyFilter {
+    static func removePII(_ text: String) -&gt; String {
+        text
+            .replacingOccurrences(
+                of: #"\b\d{3}-\d{2}-\d{4}\b"#,
+                with: "[SSN]",
+                options: .regularExpression
+            )
+    }
+}
+</code></pre>
+<h3 id="rate-limiting"><a class="header" href="#rate-limiting">Rate Limiting</a></h3>
+<pre><code class="language-swift">actor RateLimiter {
+    private var requests: [String: [Date]] = [:]
+    
+    func checkLimit(for userId: String) async -&gt; Bool {
+        let now = Date()
+        var userRequests = requests[userId] ?? []
+        userRequests = userRequests.filter { 
+            now.timeIntervalSince($0) &lt; 60 
+        }
+        guard userRequests.count &lt; 10 else { return false }
+        userRequests.append(now)
+        requests[userId] = userRequests
+        return true
+    }
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../prevention/security-policies.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../best-practices/checklist.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../prevention/training.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../best-practices/testing.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -201,11 +239,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../prevention/security-policies.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../best-practices/checklist.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../prevention/training.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../best-practices/testing.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
