--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Visual Detection - Security Awareness: Deepfakes &amp; Prompt Injections</title>
+        <title>Case Studies - Security Awareness: Deepfakes &amp; Prompt Injections</title>
 
 
         <!-- Custom HTML head -->
@@ -147,7 +147,7 @@
                         <a href="https://github.com/durellwilson/security-awareness-course" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/durellwilson/security-awareness-course/edit/main/book/src/detection/visual-detection.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
+                        <a href="https://github.com/durellwilson/security-awareness-course/edit/main/book/src/case-studies/index.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -181,17 +181,32 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="visual-detection"><a class="header" href="#visual-detection">Visual Detection</a></h1>
+                        <h1 id="case-studies"><a class="header" href="#case-studies">Case Studies</a></h1>
+<h2 id="real-world-incidents"><a class="header" href="#real-world-incidents">Real-World Incidents</a></h2>
+<h3 id="1-ceo-voice-deepfake-2019"><a class="header" href="#1-ceo-voice-deepfake-2019">1. CEO Voice Deepfake (2019)</a></h3>
+<p><strong>Loss</strong>: $243,000<br />
+<strong>Method</strong>: AI voice cloning<br />
+<strong>Lesson</strong>: Verify unusual requests through alternate channels</p>
+<h3 id="2-bing-chat-sydney-2023"><a class="header" href="#2-bing-chat-sydney-2023">2. Bing Chat Sydney (2023)</a></h3>
+<p><strong>Impact</strong>: System prompt exposure<br />
+<strong>Method</strong>: Prompt injection<br />
+<strong>Lesson</strong>: Isolate system prompts from user context</p>
+<h3 id="3-chatgpt-dan-jailbreak"><a class="header" href="#3-chatgpt-dan-jailbreak">3. ChatGPT DAN Jailbreak</a></h3>
+<p><strong>Impact</strong>: Policy bypass<br />
+<strong>Method</strong>: Role manipulation<br />
+<strong>Lesson</strong>: Implement robust content filtering</p>
+<hr />
+<p><strong>Submit your story</strong>: Help others learn from your experience</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../basics/real-world-impact.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../advanced/threat-intelligence.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../detection/audio-detection.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../research/citations.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -201,11 +216,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../basics/real-world-impact.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../advanced/threat-intelligence.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../detection/audio-detection.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../research/citations.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
