--- a/research/citations.html
+++ b/research/citations.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>How Deepfakes Work - Security Awareness: Deepfakes &amp; Prompt Injections</title>
+        <title>Research &amp; Citations - Security Awareness: Deepfakes &amp; Prompt Injections</title>
 
 
         <!-- Custom HTML head -->
@@ -147,7 +147,7 @@
                         <a href="https://github.com/durellwilson/security-awareness-course" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/durellwilson/security-awareness-course/edit/main/book/src/basics/how-deepfakes-work.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
+                        <a href="https://github.com/durellwilson/security-awareness-course/edit/main/book/src/research/citations.md" title="Suggest an edit" aria-label="Suggest an edit" rel="edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -181,17 +181,55 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="how-deepfakes-work"><a class="header" href="#how-deepfakes-work">How Deepfakes Work</a></h1>
+                        <h1 id="research-citations"><a class="header" href="#research-citations">Research Citations</a></h1>
+<h2 id="peer-reviewed-research"><a class="header" href="#peer-reviewed-research">Peer-Reviewed Research</a></h2>
+<h3 id="deepfakes"><a class="header" href="#deepfakes">Deepfakes</a></h3>
+<p><strong>[1] Chesney, R., &amp; Citron, D. (2019)</strong><br />
+"Deep Fakes: A Looming Challenge for Privacy, Democracy, and National Security"<br />
+<em>California Law Review</em>, 107(6), 1753-1820<br />
+DOI: <a href="https://doi.org/10.15779/Z38RV0D15J">10.15779/Z38RV0D15J</a></p>
+<p><strong>[2] Tolosana, R., et al. (2020)</strong><br />
+"DeepFakes and Beyond: A Survey of Face Manipulation and Fake Detection"<br />
+<em>Information Fusion</em>, 64, 131-148<br />
+DOI: <a href="https://doi.org/10.1016/j.inffus.2020.06.014">10.1016/j.inffus.2020.06.014</a></p>
+<h3 id="prompt-injection"><a class="header" href="#prompt-injection">Prompt Injection</a></h3>
+<p><strong>[4] Perez, F., &amp; Ribeiro, I. (2022)</strong><br />
+"Ignore Previous Prompt: Attack Techniques For Language Models"<br />
+<em>NeurIPS ML Safety Workshop</em><br />
+arXiv: <a href="https://arxiv.org/abs/2211.09527">2211.09527</a></p>
+<p><strong>[5] Greshake, K., et al. (2023)</strong><br />
+"Not What You've Signed Up For: Compromising Real-World LLM Applications"<br />
+<em>ACM CCS</em><br />
+DOI: <a href="https://doi.org/10.1145/3576915.3623106">10.1145/3576915.3623106</a></p>
+<p><strong>[6] Liu, Y., et al. (2023)</strong><br />
+"Prompt Injection attack against LLM-integrated Applications"<br />
+arXiv: <a href="https://arxiv.org/abs/2306.05499">2306.05499</a></p>
+<h2 id="government-standards"><a class="header" href="#government-standards">Government Standards</a></h2>
+<p><strong>[7] NIST (2023)</strong><br />
+AI Risk Management Framework<br />
+<a href="https://www.nist.gov/itl/ai-risk-management-framework">https://www.nist.gov/itl/ai-risk-management-framework</a></p>
+<p><strong>[8] CISA (2024)</strong><br />
+Securing AI Systems<br />
+<a href="https://www.cisa.gov/ai-security">https://www.cisa.gov/ai-security</a></p>
+<p><strong>[9] OWASP (2024)</strong><br />
+Top 10 for LLM Applications<br />
+<a href="https://owasp.org/www-project-top-10-for-large-language-model-applications/">https://owasp.org/www-project-top-10-for-large-language-model-applications/</a></p>
+<h2 id="industry-reports"><a class="header" href="#industry-reports">Industry Reports</a></h2>
+<p><strong>[10] Sensity AI (2023)</strong> - State of Deepfakes<br />
+<strong>[11] Microsoft Security (2024)</strong> - AI Red Team Findings<br />
+<strong>[12] IBM Security (2024)</strong> - Cost of Data Breach</p>
+<hr />
+<p><strong>Last Updated:</strong> October 31, 2025</p>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../basics/types-of-deepfakes.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../case-studies/index.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../basics/prompt-injection.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../glossary.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -201,11 +239,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../basics/types-of-deepfakes.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../case-studies/index.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../basics/prompt-injection.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../glossary.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
